Feedback and alignment fix

--- a/client/web/src/notebooks/notebookPage/NotebookPage.module.scss
+++ b/client/web/src/notebooks/notebookPage/NotebookPage.module.scss
@@ -43,12 +43,14 @@
     }
 
     .spacer {
+        max-width: #{$viewport-xl};
         // Allows scrolling past last blocks in the notebook
-        // for easier editing.
-        min-height: 20vh;
-        // Spacer should never shrink. This makes sure that (1) there is always
-        // space between the bottom of the notebookpage and the screen and (2) the
-        // notepad CTA doesn't overlap with notebook content.
+        // for easier editing. It will also ensure that there is enough space
+        // between the notepad cta and the content
+        margin-top: 10rem;
+        // Spacer should never shrink. This makes sure that
+        // (1) there is always space between the bottom of the notebookpage and the screen and
+        // (2) the notepad CTA doesn't overlap with notebook content.
         flex: 1 0 auto;
         display: flex;
         // Aligns notepad CTA at the bottom of the page
@@ -61,7 +63,6 @@
     bottom: 0;
     max-width: #{$viewport-md};
     margin: auto;
-    margin-top: 8rem;
     margin-bottom: 1rem;
 
     &--close-button {
